nitric/resources/dsl/generated/declarative/DeclarativeParser.py
# Generated from Declarative.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DeclarativeParser ( Parser ):

    grammarFileName = "Declarative.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'FROM'", "'INTO'", "'AS'", "'ON'", "'WHERE'", 
                     "'SELECT'", "'GROUP'", "'BY'", "'JOIN'", "'ENRICH'", 
                     "'WINDOW'", "'SCHEDULE'", "'MAP'", "'TO'", "'STATE'", 
                     "'DATA'", "'KEY'", "'VALUE'", "'USING'", "'STREAM'", 
                     "'KV'", "'TIMESERIES'", "'AND'", "'OR'", "'NOT'", "'IS'", 
                     "'NULL'", "'BETWEEN'", "'TRUE'", "'FALSE'", "'INNER'", 
                     "'LEFT'", "'LEFT_SEMI'", "'FULL'", "'FULL_OUTER'", 
                     "'REPLACE'", "'INCREMENT'", "'DECREMENT'", "'MAXIMUM'", 
                     "'MINIMUM'", "'COLLECT'", "'SNAPSHOT'", "'CDC'", "'PERIODIC'", 
                     "'SUM'", "'COUNT'", "'AVG'", "'MAX'", "'MIN'", "'LAST'", 
                     "'FIRST'", "'STDDEV'", "'VARIANCE'", "'COLLECT_LIST'", 
                     "'UPPER'", "'LOWER'", "'ROUND'", "'ABS'", "'FLOOR'", 
                     "'CEIL'", "'CAST'", "'COALESCE'", "'LENGTH'", "'SUBSTRING'", 
                     "'CONCAT'", "'TO_TIMESTAMP'", "'DATE_FORMAT'", "'YEAR'", 
                     "'MONTH'", "'DAY'", "'HOUR'", "'DOUBLE'", "'LONG'", 
                     "'STRING_TYPE'", "'BOOLEAN'", "'TIMESTAMP'", "'='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'+'", "'-'", 
                     "'*'", "'/'", "','", "'('", "')'", "'ISTREAM'", "'DSTREAM'", 
                     "'RSTREAM'" ]

    symbolicNames = [ "<INVALID>", "FROM", "INTO", "AS", "ON", "WHERE", 
                      "SELECT", "GROUP", "BY", "JOIN", "ENRICH", "WINDOW", 
                      "SCHEDULE", "MAP", "TO", "STATE", "DATA", "KEY", "VALUE", 
                      "USING", "STREAM", "KV", "TIMESERIES", "AND", "OR", 
                      "NOT", "IS", "NULL", "BETWEEN", "TRUE", "FALSE", "INNER", 
                      "LEFT", "LEFT_SEMI", "FULL", "FULL_OUTER", "REPLACE", 
                      "INCREMENT", "DECREMENT", "MAXIMUM", "MINIMUM", "COLLECT", 
                      "SNAPSHOT", "CDC", "PERIODIC", "SUM", "COUNT", "AVG", 
                      "MAX", "MIN", "LAST", "FIRST", "STDDEV", "VARIANCE", 
                      "COLLECT_LIST", "UPPER", "LOWER", "ROUND", "ABS", 
                      "FLOOR", "CEIL", "CAST", "COALESCE", "LENGTH", "SUBSTRING", 
                      "CONCAT", "TO_TIMESTAMP", "DATE_FORMAT", "YEAR", "MONTH", 
                      "DAY", "HOUR", "T_DOUBLE", "T_LONG", "T_STRING", "T_BOOLEAN", 
                      "T_TIMESTAMP", "EQ", "NEQ", "GT", "LT", "GTE", "LTE", 
                      "PLUS", "MINUS", "STAR", "SLASH", "COMMA", "LPAREN", 
                      "RPAREN", "ISTREAM", "DSTREAM", "RSTREAM", "STRING", 
                      "NUMBER", "ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_pipeline = 0
    RULE_dataPipeline = 1
    RULE_dataSource = 2
    RULE_dataSink = 3
    RULE_dataClause = 4
    RULE_statePipeline = 5
    RULE_stateSource = 6
    RULE_stateSink = 7
    RULE_stateClause = 8
    RULE_crossToState = 9
    RULE_crossToData = 10
    RULE_streamOperator = 11
    RULE_whereClause = 12
    RULE_selectClause = 13
    RULE_selectExpr = 14
    RULE_windowClause = 15
    RULE_groupByClause = 16
    RULE_aggExpr = 17
    RULE_joinClause = 18
    RULE_sourceRef = 19
    RULE_expression = 20
    RULE_builtinFunc = 21
    RULE_aggFunc = 22
    RULE_compOp = 23
    RULE_arithOp = 24
    RULE_joinType = 25
    RULE_stateOp = 26
    RULE_strategy = 27
    RULE_typeName = 28
    RULE_literal = 29
    RULE_name = 30

    ruleNames =  [ "pipeline", "dataPipeline", "dataSource", "dataSink", 
                   "dataClause", "statePipeline", "stateSource", "stateSink", 
                   "stateClause", "crossToState", "crossToData", "streamOperator", 
                   "whereClause", "selectClause", "selectExpr", "windowClause", 
                   "groupByClause", "aggExpr", "joinClause", "sourceRef", 
                   "expression", "builtinFunc", "aggFunc", "compOp", "arithOp", 
                   "joinType", "stateOp", "strategy", "typeName", "literal", 
                   "name" ]

    EOF = Token.EOF
    FROM=1
    INTO=2
    AS=3
    ON=4
    WHERE=5
    SELECT=6
    GROUP=7
    BY=8
    JOIN=9
    ENRICH=10
    WINDOW=11
    SCHEDULE=12
    MAP=13
    TO=14
    STATE=15
    DATA=16
    KEY=17
    VALUE=18
    USING=19
    STREAM=20
    KV=21
    TIMESERIES=22
    AND=23
    OR=24
    NOT=25
    IS=26
    NULL=27
    BETWEEN=28
    TRUE=29
    FALSE=30
    INNER=31
    LEFT=32
    LEFT_SEMI=33
    FULL=34
    FULL_OUTER=35
    REPLACE=36
    INCREMENT=37
    DECREMENT=38
    MAXIMUM=39
    MINIMUM=40
    COLLECT=41
    SNAPSHOT=42
    CDC=43
    PERIODIC=44
    SUM=45
    COUNT=46
    AVG=47
    MAX=48
    MIN=49
    LAST=50
    FIRST=51
    STDDEV=52
    VARIANCE=53
    COLLECT_LIST=54
    UPPER=55
    LOWER=56
    ROUND=57
    ABS=58
    FLOOR=59
    CEIL=60
    CAST=61
    COALESCE=62
    LENGTH=63
    SUBSTRING=64
    CONCAT=65
    TO_TIMESTAMP=66
    DATE_FORMAT=67
    YEAR=68
    MONTH=69
    DAY=70
    HOUR=71
    T_DOUBLE=72
    T_LONG=73
    T_STRING=74
    T_BOOLEAN=75
    T_TIMESTAMP=76
    EQ=77
    NEQ=78
    GT=79
    LT=80
    GTE=81
    LTE=82
    PLUS=83
    MINUS=84
    STAR=85
    SLASH=86
    COMMA=87
    LPAREN=88
    RPAREN=89
    ISTREAM=90
    DSTREAM=91
    RSTREAM=92
    STRING=93
    NUMBER=94
    ID=95
    WS=96
    LINE_COMMENT=97
    BLOCK_COMMENT=98

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PipelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataPipeline(self):
            return self.getTypedRuleContext(DeclarativeParser.DataPipelineContext,0)


        def EOF(self):
            return self.getToken(DeclarativeParser.EOF, 0)

        def statePipeline(self):
            return self.getTypedRuleContext(DeclarativeParser.StatePipelineContext,0)


        def getRuleIndex(self):
            return DeclarativeParser.RULE_pipeline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipeline" ):
                return visitor.visitPipeline(self)
            else:
                return visitor.visitChildren(self)




    def pipeline(self):

        localctx = DeclarativeParser.PipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_pipeline)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.dataPipeline()
                self.state = 63
                self.match(DeclarativeParser.EOF)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.statePipeline()
                self.state = 66
                self.match(DeclarativeParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataPipelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dataSource(self):
            return self.getTypedRuleContext(DeclarativeParser.DataSourceContext,0)


        def dataSink(self):
            return self.getTypedRuleContext(DeclarativeParser.DataSinkContext,0)


        def dataClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeclarativeParser.DataClauseContext)
            else:
                return self.getTypedRuleContext(DeclarativeParser.DataClauseContext,i)


        def crossToState(self):
            return self.getTypedRuleContext(DeclarativeParser.CrossToStateContext,0)


        def stateSink(self):
            return self.getTypedRuleContext(DeclarativeParser.StateSinkContext,0)


        def stateClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DeclarativeParser.StateClauseContext)
            else:
                return self.getTypedRuleContext(DeclarativeParser.StateClauseContext,i)


        def crossToData(self):
            return self.getTypedRuleContext(DeclarativeParser.CrossToDataContext,0)


        def getRuleIndex(self):
            return DeclarativeParser.RULE_dataPipeline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataPipeline" ):
                return visitor.visitDataPipeline(self)
            else:
                return visitor.visitChildren(self)




    def dataPipeline(self):

        localctx = DeclarativeParser.DataPipelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_dataPipeline)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.dataSource()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66571996384) != 0):
                    self.state = 71
                    self.dataClause()
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 77
                self.dataSink()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.dataSource()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66571996384) != 0):
                    self.state = 80
                    self.dataClause()
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                self.crossToState()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66571994336) != 0):
                    self.state = 87
                    self.stateClause()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 93
                self.stateSink()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.dataSource()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66571996384) != 0):
                    self.state = 96
                    self.dataClause()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 102
                self.crossToState()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66571994336) != 0):
                    self.state = 103
                    self.stateClause()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.crossToData()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66571996384) != 0):
                    self.state = 110
                    self.dataClause()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 116
                self.dataSink()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataSourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DeclarativeParser.RULE_dataSource

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FromStreamContext(DataSourceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DeclarativeParser.DataSourceContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FROM(self):
            return self.getToken(DeclarativeParser.FROM, 0)
        def STREAM(self):
            return self.getToken(DeclarativeParser.STREAM, 0)
        def name(self):
            return self.getTypedRuleContext(DeclarativeParser.NameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromStream" ):
                return visitor.visitFromStream(self)
            else:
                return visitor.visitChildren(self)


    class FromTimeseriesDataContext(DataSourceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DeclarativeParser.DataSourceContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FROM(self):
            return self.getToken(DeclarativeParser.FROM, 0)
        def TIMESERIES(self):
            return self.getToken(DeclarativeParser.TIMESERIES, 0)
        def name(self):
            return self.getTypedRuleContext(DeclarativeParser.NameContext,0)

        def AS(self):
            return self.getToken(DeclarativeParser.AS, 0)
        def DATA(self):
            return self.getToken(DeclarativeParser.DATA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromTimeseriesData" ):
                return visitor.visitFromTimeseriesData(self)
            else:
                return visitor.visitChildren(self)



    def dataSource(self):

        localctx = DeclarativeParser.DataSourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dataSource)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = DeclarativeParser.FromStreamContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(DeclarativeParser.FROM)
                self.state = 121
                self.match(DeclarativeParser.STREAM)
                self.state = 122
                self.name()
                pass

            elif la_ == 2:
                localctx = DeclarativeParser.FromTimeseriesDataContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(DeclarativeParser.FROM)
                self.state = 124
                self.match(DeclarativeParser.TIMESERIES)
                self.state = 125
                self.name()
                self.state = 126
                self.match(DeclarativeParser.AS)
                self.state = 127
                self.match(DeclarativeParser.DATA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataSinkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DeclarativeParser.RULE_dataSink

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IntoStreamContext(DataSinkContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DeclarativeParser.DataSinkContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTO(self):
            return self.getToken(DeclarativeParser.INTO, 0)
        def STREAM(self):
            return self.getToken(DeclarativeParser.STREAM, 0)
        def name(self):
            return self.getTypedRuleContext(DeclarativeParser.NameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntoStream" ):
                return visitor.visitIntoStream(self)
            else:
                return visitor.visitChildren(self)


    class IntoTimeseriesDataContext(DataSinkContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DeclarativeParser.DataSinkContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTO(self):
            return self.getToken(DeclarativeParser.INTO, 0)
        def TIMESERIES(self):
            return self.getToken(DeclarativeParser.TIMESERIES, 0)
        def name(self):
            return self.getTypedRuleContext(DeclarativeParser.NameContext,0)

        def AS(self):
            return self.getToken(DeclarativeParser.AS, 0)
        def DATA(self):
            return self.getToken(DeclarativeParser.DATA, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntoTimeseriesData" ):
                return visitor.visitIntoTimeseriesData(self)
            else:
                return visitor.visitChildren(self)



    def dataSink(self):

        localctx = DeclarativeParser.DataSinkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_dataSink)
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = DeclarativeParser.IntoStreamContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(DeclarativeParser.INTO)
                self.state = 132
                self.match(DeclarativeParser.STREAM)
                self.state = 133
                self.name()
                pass

            elif la_ == 2:
                localctx = DeclarativeParser.IntoTimeseriesDataContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(DeclarativeParser.INTO)
                self.state = 135
                self.match(DeclarativeParser.TIMESERIES)
                self.state = 136
                self.name()
                self.state = 137
                self.match(DeclarativeParser.AS)
                self.state = 138
                self.match(DeclarativeParser.DATA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DeclarativeParser.RULE_dataClause

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WindowGroupByContext(DataClauseContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DeclarativeParser.DataClauseContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def windowClause(self):
            return self.getTypedRuleContext(DeclarativeParser.WindowClauseContext,0)

        def groupByClause(self):
            return self.getTypedRuleContext(DeclarativeParser.GroupByClauseContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWindowGroupBy" ):
                return visitor.visitWindowGroupBy(self)
            else:
                return visitor.visitChildren(self)


    class GroupByDataContext(DataClauseContext):
